<resources>
    <string name="app_name">RUCafeProject5</string>
    <string name="main_activity_text">Welcome to RU Cafe!!</string>
    <string name="donut_button_content_description">Donut Button</string>
    <string name="coffee_button_content_description">Coffee Button</string>
    <string name="current_button_content_description">Current Order Button</string>
    <string name="store_button_content_description">Store Order Button</string>
    <string name="coffee_picture">Coffee Picture (PNG)</string>
    <string name="donut_picture">Donut Picture (PNG)</string>
    <string name="currentOrder_picture">Current Order Picture (PNG)</string>
    <string name="storeOrder_picture">Store Order Picture (PNG)</string>
    <string name="cofee_activity_label">Order your Coffee here!</string>
    <string name="donut_activity_label">Choose donut flavor below!!</string>
    <string name="cream">Cream</string>
    <string name="caramel">Caramel</string>
    <string name="syrup">Syrup</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="milk">Milk</string>
    <string name="subtotal_hint_text">Subtotal</string>
    <string name="place_order_button">Place Order</string>
    <string name="current_order_label">Your current order!</string>
    <string name="remove_order_text">Remove Order</string>
    <string name="store_order_label">All of the store orders!</string>
    <string name="total_order_text">Total: </string>
    <string name="sales_tax_activity_order">Sales Tax: </string>
    <string name="subtotal_activity_order">Subtotal: </string>
    <string name="total_activity_order">Total: </string>
    <string name="choose_donut_quantity">Choose the quantity and hit Place Order please</string>
    <string name="blank"> </string>
    <string name="coffee_explanation">Please select quantity first, then size and select add ons last.</string>
    <string name="donut_activity_title">Order Donut(s)</string>
    <string name="coffee_activity_title">Order Coffee(s)</string>
    <string name="order_activity_title">View Shopping Cart</string>
    <string name="store_order_activity_title">View All Orders</string>
    <string name="donut_order_activity_title">Select Donut(s) Quantity</string>
    <string name="main_activity_title">Rutgers Cafeteria</string>
    <string name="reset_button_text">RESET ALL</string>
    <string name="remove_order_helper_title">Click on the individual order to delete and then confirm!</string>
    <string-array name="quantity">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string-array name="size">
        <item>Short</item>
        <item>Tall</item>
        <item>Grande</item>
        <item>Venti</item>
    </string-array>
</resources>